--- a/package.json
+++ b/package.json
@@ -11,20 +11,20 @@
         "@inertiajs/react": "^2.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@types/node": "^18.13.0",
-        "@types/react": "^18.0.28",
-        "@types/react-dom": "^18.0.10",
+        "@types/react": "^18.3.18",
+        "@types/react-dom": "^18.3.5",
         "@typescript-eslint/eslint-plugin": "^7.16.0",
         "@typescript-eslint/parser": "^7.16.0",
         "@vitejs/plugin-react": "^4.2.0",
         "autoprefixer": "^10.4.12",
-        "axios": "^1.7.4",
+        "axios": "^1.7.9",
         "concurrently": "^9.0.1",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.1.3",
         "eslint-plugin-react": "^7.34.4",
         "eslint-plugin-react-hooks": "^4.6.2",
-        "laravel-vite-plugin": "^1.0",
+        "laravel-vite-plugin": "^1.1.1",
         "postcss": "^8.4.31",
         "prettier": "^3.3.0",
         "prettier-plugin-organize-imports": "^4.0.0",
@@ -33,6 +33,14 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "typescript": "^5.0.2",
-        "vite": "^6.0"
+        "vite": "^6.0.7"
+    },
+    "dependencies": {
+        "@types/react-dnd": "^2.0.36",
+        "laravel-echo": "^1.17.1",
+        "pusher-js": "^8.4.0-rc2",
+        "react-dnd": "^16.0.1",
+        "react-dnd-html5-backend": "^16.0.1",
+        "react-hot-toast": "^2.5.1"
     }
 }
