--- a/package.json
+++ b/package.json
@@ -36,6 +36,17 @@
         "vite": "^6.0"
     },
     "dependencies": {
-        "flowbite": "^2.5.2"
+        "@radix-ui/react-dialog": "^1.1.5",
+        "@radix-ui/react-dropdown-menu": "^2.1.5",
+        "@radix-ui/react-label": "^2.1.1",
+        "@radix-ui/react-separator": "^1.1.1",
+        "@radix-ui/react-slot": "^1.1.1",
+        "@radix-ui/react-tooltip": "^1.1.7",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "flowbite": "^2.5.2",
+        "lucide-react": "^0.474.0",
+        "tailwind-merge": "^2.6.0",
+        "tailwindcss-animate": "^1.0.7"
     }
 }
