--- a/.github/workflows/av_vps_actions.yaml
+++ b/.github/workflows/av_vps_actions.yaml
@@ -20,16 +20,17 @@ jobs:
           chmod 600 ~/.ssh/av_rsa
           ssh-keyscan -H "${{ secrets.VPS_HOST }}" >> ~/.ssh/known_hosts
 
-      - name: Debug SSH Setup
+      - name: Ensure Repository Exists on VPS
         run: |
-          echo "Checking SSH key permissions:"
-          ls -l ~/.ssh/av_rsa
-          echo "Checking known_hosts file:"
-          cat ~/.ssh/known_hosts
-
-      - name: Test SSH Connection
-        run: |
-          ssh -i ~/.ssh/av_rsa -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "echo 'SSH Connection Successful'"
+          ssh -i ~/.ssh/av_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "
+            if [ ! -d '~/novatix/.git' ]; then
+              echo 'Repository not found. Cloning...'
+              rm -rf ~/novatix  # Remove existing folder if it's not a git repo
+              git clone https://github.com/your-username/your-repo.git ~/novatix
+            else
+              echo 'Repository exists.'
+            fi
+          "
 
       - name: Pull Latest Changes on VPS
         run: |
