--- a/.github/workflows/av_vps_actions.yaml
+++ b/.github/workflows/av_vps_actions.yaml
@@ -26,7 +26,7 @@ jobs:
             if [ ! -d '~/novatix/.git' ]; then
               echo 'Repository not found. Cloning...'
               rm -rf ~/novatix  # Remove existing folder if it's not a git repo
-              git clone https://github.com/ArachnoVa-id/novatix ~/novatix
+              git clone git@github.com:ArachnoVa-id/novatix.git ~/novatix
             else
               echo 'Repository exists.'
             fi
