--- a/.github/workflows/av_vps_actions.yaml
+++ b/.github/workflows/av_vps_actions.yaml
@@ -20,18 +20,133 @@ jobs:
           chmod 600 ~/.ssh/av_rsa
           ssh-keyscan -H "${{ secrets.VPS_HOST }}" >> ~/.ssh/known_hosts
 
-      - name: Ensure Repository Exists on VPS
+      - name: Ensure Folder Structure & Create Scripts
         run: |
-          ssh -i ~/.ssh/av_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "
-            if [ ! -d '~/novatix/.git' ]; then
-              echo 'Repository not found. Cloning...'
-              rm -rf ~/novatix  # Remove existing folder if it's not a git repo
-              git clone git@github.com:ArachnoVa-id/novatix.git ~/novatix
-            else
-              echo 'Repository exists.'
-            fi
-          "
+          ssh -i ~/.ssh/av_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
+            set -e
+            mkdir -p /novatix/app /novatix/setups
 
-      - name: Pull Latest Changes on VPS
-        run: |
-          ssh -i ~/.ssh/av_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "cd ~/novatix && git pull origin main"
+            # ✅ Ensure update_repo.sh exists
+            if [ ! -f "/novatix/setups/update_repo.sh" ]; then
+              echo '#!/bin/bash
+              cd /novatix/app
+              if [ ! -d ".git" ]; then
+                echo "Repository not found. Cloning..."
+                git clone git@github.com:ArachnoVa-id/novatix.git /novatix/app
+              else
+                echo "Repository found. Pulling latest changes..."
+                git pull origin main
+              fi' > /novatix/setups/update_repo.sh
+              chmod +x /novatix/setups/update_repo.sh
+            fi
+
+            # ✅ Ensure install_dependencies.sh exists
+            if [ ! -f "/novatix/setups/install_dependencies.sh" ]; then
+              echo '#!/bin/bash
+              cd /novatix/app
+              composer install --no-interaction --prefer-dist' > /novatix/setups/install_dependencies.sh
+              chmod +x /novatix/setups/install_dependencies.sh
+            fi
+
+            # ✅ Ensure deploy_laravel.sh exists
+            if [ ! -f "/novatix/setups/deploy_laravel.sh" ]; then
+              echo '#!/bin/bash
+              cd /novatix/app
+              php artisan migrate --force
+              php artisan config:clear
+              php artisan cache:clear
+              php artisan route:cache' > /novatix/setups/deploy_laravel.sh
+              chmod +x /novatix/setups/deploy_laravel.sh
+            fi
+
+            # ✅ Ensure restart_services.sh exists
+            if [ ! -f "/novatix/setups/restart_services.sh" ]; then
+              echo '#!/bin/bash
+              sudo systemctl restart php8.1-fpm' > /novatix/setups/restart_services.sh
+              chmod +x /novatix/setups/restart_services.sh
+            fi
+
+            # ✅ Auto-generate .env if missing
+            if [ ! -f "/novatix/app/.env" ]; then
+              echo "Generating .env file..."
+              cat <<EOT > /novatix/app/.env
+          APP_NAME=Laravel
+          APP_ENV=production
+          APP_KEY=${{ secrets.APP_KEY }}
+          APP_DEBUG=false
+          APP_TIMEZONE=UTC
+          APP_URL=${{ secrets.APP_URL }}
+
+          APP_LOCALE=en
+          APP_FALLBACK_LOCALE=en
+          APP_FAKER_LOCALE=en_US
+
+          APP_MAINTENANCE_DRIVER=file
+          PHP_CLI_SERVER_WORKERS=4
+
+          BCRYPT_ROUNDS=12
+
+          LOG_CHANNEL=stack
+          LOG_STACK=single
+          LOG_DEPRECATIONS_CHANNEL=null
+          LOG_LEVEL=debug
+
+          DB_CONNECTION=mariadb
+          DB_HOST=${{ secrets.DB_HOST }}
+          DB_PORT=${{ secrets.DB_PORT }}
+          DB_DATABASE=${{ secrets.DB_DATABASE }}
+          DB_USERNAME=${{ secrets.DB_USERNAME }}
+          DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+
+          SESSION_DRIVER=database
+          SESSION_LIFETIME=120
+          SESSION_ENCRYPT=false
+          SESSION_PATH=/
+          SESSION_DOMAIN=null
+
+          BROADCAST_CONNECTION=log
+          FILESYSTEM_DISK=local
+          QUEUE_CONNECTION=database
+
+          CACHE_STORE=database
+          CACHE_PREFIX=
+
+          MEMCACHED_HOST=127.0.0.1
+
+          REDIS_CLIENT=phpredis
+          REDIS_HOST=${{ secrets.REDIS_HOST }}
+          REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }}
+          REDIS_PORT=${{ secrets.REDIS_PORT }}
+
+          MAIL_MAILER=smtp
+          MAIL_SCHEME=null
+          MAIL_HOST=${{ secrets.MAIL_HOST }}
+          MAIL_PORT=${{ secrets.MAIL_PORT }}
+          MAIL_USERNAME=${{ secrets.MAIL_USERNAME }}
+          MAIL_PASSWORD=${{ secrets.MAIL_PASSWORD }}
+          MAIL_FROM_ADDRESS=${{ secrets.MAIL_FROM_ADDRESS }}
+          MAIL_FROM_NAME="${APP_NAME}"
+
+          AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION=${{ secrets.AWS_DEFAULT_REGION }}
+          AWS_BUCKET=${{ secrets.AWS_BUCKET }}
+          AWS_USE_PATH_STYLE_ENDPOINT=false
+
+          VITE_APP_NAME="${APP_NAME}"
+          EOT
+                  chmod 600 /novatix/app/.env
+                fi
+              EOF
+
+      - name: Update Repository on VPS
+        run: ssh -i ~/.ssh/av_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "/novatix/setups/update_repo.sh"
+
+      - name: Install Dependencies on VPS
+        run: ssh -i ~/.ssh/av_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "/novatix/setups/install_dependencies.sh"
+
+      - name: Deploy Laravel on VPS
+        run: ssh -i ~/.ssh/av_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "/novatix/setups/deploy_laravel.sh"
+
+      - name: Restart Services on VPS
+        run: ssh -i ~/.ssh/av_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "/novatix/setups/restart_services.sh"
