--- a/.github/workflows/av_vps_actions.yaml
+++ b/.github/workflows/av_vps_actions.yaml
@@ -24,58 +24,58 @@ jobs:
         run: |
           ssh -i ~/.ssh/av_rsa -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} 'bash -s' << 'EOF'
             set -e
-            echo "Logged in as $(whoami)"
-            mkdir -p /novatix/app /novatix/setups
+            echo "Ensuring folder structure..."
+            mkdir -p ~/novatix/app ~/novatix/setups
 
             # Ensure update_repo.sh exists
             echo "Creating update_repo.sh..."
-            cat > /novatix/setups/update_repo.sh << 'EOT'
+            cat > ~/novatix/setups/update_repo.sh << 'EOT'
             #!/bin/bash
-            cd /novatix/app
+            cd ~/novatix/app
             if [ ! -d ".git" ]; then
               echo "Repository not found. Cloning..."
-              git clone git@github.com:ArachnoVa-id/novatix.git /novatix/app
+              git clone git@github.com:ArachnoVa-id~/novatix.git ~/novatix/app
             else
               echo "Repository found. Pulling latest changes..."
               git pull origin main
             fi
             EOT
-            chmod +x /novatix/setups/update_repo.sh
+            chmod +x ~/novatix/setups/update_repo.sh
 
             # Ensure install_dependencies.sh exists
             echo "Creating install_dependencies.sh..."
-            cat > /novatix/setups/install_dependencies.sh << 'EOT'
+            cat > ~/novatix/setups/install_dependencies.sh << 'EOT'
             #!/bin/bash
-            cd /novatix/app
+            cd ~/novatix/app
             composer install --no-interaction --prefer-dist
             EOT
-            chmod +x /novatix/setups/install_dependencies.sh
+            chmod +x ~/novatix/setups/install_dependencies.sh
 
             # Ensure deploy_laravel.sh exists
             echo "Creating deploy_laravel.sh..."
-            cat > /novatix/setups/deploy_laravel.sh << 'EOT'
+            cat > ~/novatix/setups/deploy_laravel.sh << 'EOT'
             #!/bin/bash
-            cd /novatix/app
+            cd ~/novatix/app
             php artisan migrate --force
             php artisan config:clear
             php artisan cache:clear
             php artisan route:cache
             EOT
-            chmod +x /novatix/setups/deploy_laravel.sh
+            chmod +x ~/novatix/setups/deploy_laravel.sh
 
             # Ensure restart_services.sh exists
             echo "Creating restart_services.sh..."
-            cat > /novatix/setups/restart_services.sh << 'EOT'
+            cat > ~/novatix/setups/restart_services.sh << 'EOT'
             #!/bin/bash
             sudo systemctl restart php8.1-fpm
             EOT
-            chmod +x /novatix/setups/restart_services.sh
+            chmod +x ~/novatix/setups/restart_services.sh
 
             # Auto-generate .env if missing
             echo "Checking .env file..."
-            if [ ! -f "/novatix/app/.env" ]; then
+            if [ ! -f "~/novatix/app/.env" ]; then
               echo "Generating .env file..."
-              cat > /novatix/app/.env << EOT
+              cat > ~/novatix/app/.env << EOT
           APP_NAME=Laravel
           APP_ENV=production
           APP_KEY=${{ secrets.APP_KEY }}
@@ -141,18 +141,18 @@ jobs:
 
           VITE_APP_NAME="${APP_NAME}"
           EOT
-              chmod 600 /novatix/app/.env
+              chmod 600 ~/novatix/app/.env
             fi
           EOF
 
       - name: Update Repository on VPS
-        run: ssh -i ~/.ssh/av_rsa -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "/novatix/setups/update_repo.sh"
+        run: ssh -i ~/.ssh/av_rsa -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "~/novatix/setups/update_repo.sh"
 
       - name: Install Dependencies on VPS
-        run: ssh -i ~/.ssh/av_rsa -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "/novatix/setups/install_dependencies.sh"
+        run: ssh -i ~/.ssh/av_rsa -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "~/novatix/setups/install_dependencies.sh"
 
       - name: Deploy Laravel on VPS
-        run: ssh -i ~/.ssh/av_rsa -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "/novatix/setups/deploy_laravel.sh"
+        run: ssh -i ~/.ssh/av_rsa -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "~/novatix/setups/deploy_laravel.sh"
 
       - name: Restart Services on VPS
-        run: ssh -i ~/.ssh/av_rsa -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "/novatix/setups/restart_services.sh"
+        run: ssh -i ~/.ssh/av_rsa -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "~/novatix/setups/restart_services.sh"
