--- a/.github/workflows/av_vps_actions.yaml
+++ b/.github/workflows/av_vps_actions.yaml
@@ -37,7 +37,7 @@ jobs:
 
           if [ ! -d ".git" ]; then
               echo "Repository not found. Cloning..."
-              git clone git@github.com:ArachnoVa-id/novatix.git .
+              git clone git@github.com:ArachnoVa-id/novatix.git ~/novatix/app
           else
               echo "Repository found. Pulling latest changes..."
               git pull origin main
