--- a/.github/workflows/av_vps_actions.yaml
+++ b/.github/workflows/av_vps_actions.yaml
@@ -6,8 +6,51 @@ on:
       - main
 
 jobs:
+  test-build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: 🛠 Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: 🔧 Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20 # Adjust if needed
+
+      - name: 📦 Install Frontend Dependencies
+        run: npm install
+
+      - name: 🏗 Build Frontend (Vite)
+        run: npm run build
+
+  test-laravel:
+    runs-on: ubuntu-latest
+    needs: test-build # Run Laravel tests after Vite build
+    steps:
+      - name: 🛠 Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: 🔧 Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 8.2
+          extensions: mbstring, bcmath, xml, pdo_mysql
+          tools: composer, phpunit
+
+      - name: 📦 Install Backend Dependencies
+        run: composer install --no-dev --optimize-autoloader
+
+      - name: 🛠 Set Up Laravel Environment
+        run: |
+          cp .env.example .env
+          php artisan key:generate
+
+      - name: 🛠 Run Laravel Tests
+        run: php artisan test
+
   vps_sync:
     runs-on: ubuntu-latest
+    needs: test-laravel # Deploy only if Laravel tests pass
 
     steps:
       - name: Checkout Repository
