--- a/.github/workflows/nt_vps_develop.yaml
+++ b/.github/workflows/nt_vps_develop.yaml
@@ -1,59 +1,59 @@
-name: ArachnoVa VPS Actions
+name: NovaTix VPS Develop
 
 on:
   push:
     branches:
-      - main
+      - develop
 
 jobs:
-  test-build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: 🛠 Checkout Repository
-        uses: actions/checkout@v4
+  # test-build:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: 🛠 Checkout Repository
+  #       uses: actions/checkout@v4
 
-      - name: 🔧 Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 'lts/*'
-          cache: 'npm'
+  #     - name: 🔧 Setup Node.js
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version: 'lts/*'
+  #         cache: 'npm'
 
-      - name: 📦 Install Frontend Dependencies
-        run: |
-          rm -rf node_modules package-lock.json
-          npm install --legacy-peer-deps
+  #     - name: 📦 Install Frontend Dependencies
+  #       run: |
+  #         rm -rf node_modules package-lock.json
+  #         npm install --legacy-peer-deps
 
-      - name: 🏗 Build Frontend (Vite)
-        run: npm run build
+  #     - name: 🏗 Build Frontend (Vite)
+  #       run: npm run build
 
-  test-laravel:
-    runs-on: ubuntu-latest
-    needs: test-build # Run Laravel tests after Vite build
-    steps:
-      - name: 🛠 Checkout Repository
-        uses: actions/checkout@v4
+  # test-laravel:
+  #   runs-on: ubuntu-latest
+  #   needs: test-build # Run Laravel tests after Vite build
+  #   steps:
+  #     - name: 🛠 Checkout Repository
+  #       uses: actions/checkout@v4
 
-      - name: 🔧 Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 8.2
-          extensions: mbstring, bcmath, xml, pdo_mysql
-          tools: composer, phpunit
+  #     - name: 🔧 Setup PHP
+  #       uses: shivammathur/setup-php@v2
+  #       with:
+  #         php-version: 8.2
+  #         extensions: mbstring, bcmath, xml, pdo_mysql
+  #         tools: composer, phpunit
 
-      - name: 📦 Install Backend Dependencies
-        run: composer install --no-dev --optimize-autoloader
+  #     - name: 📦 Install Backend Dependencies
+  #       run: composer install --no-dev --optimize-autoloader
 
-      - name: 🛠 Set Up Laravel Environment
-        run: |
-          cp .env.example .env
-          php artisan key:generate
+  #     - name: 🛠 Set Up Laravel Environment
+  #       run: |
+  #         cp .env.example .env
+  #         php artisan key:generate
 
-      - name: 🛠 Run Laravel Tests
-        run: php artisan test
+  #     - name: 🛠 Run Laravel Tests
+  #       run: php artisan test
 
   vps_sync:
     runs-on: ubuntu-latest
-    needs: test-laravel # Deploy only if Laravel tests pass
+    # needs: test-laravel # Deploy only if Laravel tests pass
 
     steps:
       - name: Checkout Repository
@@ -72,13 +72,13 @@ jobs:
           set -e
 
           echo "Ensuring folder structure..."
-          mkdir -p ~/novatix/app ~/novatix/setups
+          mkdir -p ~/novatix/app/develop ~/novatix/setups
 
           # Ensure update_repo.sh exists
           echo "Creating update_repo.sh..."
           cat > ~/novatix/setups/update_repo.sh << 'EOT'
           #!/bin/bash
-          mkdir -p ~/novatix/app
+          mkdir -p ~/novatix/app/develop
           cd ~/novatix
 
           if [ ! -d "app/.git" ]; then
@@ -105,7 +105,7 @@ jobs:
               echo "Creating install_dependencies.sh..."
               cat > ~/novatix/setups/install_dependencies.sh << 'EOT'
           #!/bin/bash
-          cd ~/novatix/app
+          cd ~/novatix/app/develop
           composer install --no-interaction --prefer-dist
           EOT
               chmod +x ~/novatix/setups/install_dependencies.sh
@@ -114,7 +114,7 @@ jobs:
               echo "Creating deploy_laravel.sh..."
               cat > ~/novatix/setups/deploy_laravel.sh << 'EOT'
           #!/bin/bash
-          cd ~/novatix/app
+          cd ~/novatix/app/develop
           php artisan migrate --force --seed
           php artisan config:clear
           php artisan cache:clear
@@ -132,9 +132,9 @@ jobs:
 
               # Auto-generate .env if missing
               echo "Checking .env file..."
-              if [ ! -f ~/novatix/app/.env ]; then
+              if [ ! -f ~/novatix/app/develop/.env ]; then
                   echo "Generating .env file..."
-                  cat > ~/novatix/app/.env << EOT
+                  cat > ~/novatix/app/develop/.env << EOT
           APP_NAME=${{ vars.APP_NAME }}
           APP_ENV=${{ vars.APP_ENV }}
           APP_KEY=${{ secrets.APP_KEY }}
@@ -200,7 +200,7 @@ jobs:
 
           VITE_APP_NAME=${{ vars.APP_NAME }}
           EOT
-                  chmod 600 ~/novatix/app/.env
+                  chmod 600 ~/novatix/app/develop/.env
               fi
           EOF
 
