--- a/.github/workflows/nt_vps_develop.yaml
+++ b/.github/workflows/nt_vps_develop.yaml
@@ -126,86 +126,101 @@ jobs:
               echo "Creating restart_services.sh..."
               cat > ~/novatix/setups/restart_services.sh << 'EOT'
           #!/bin/bash
-          sudo systemctl restart php8.1-fpm
+          sudo systemctl restart php8.2-fpm
           EOT
               chmod +x ~/novatix/setups/restart_services.sh
 
-              # Auto-generate .env if missing
-              echo "Checking .env file..."
-              if [ ! -f ~/novatix/app/develop/.env ]; then
-                  echo "Generating .env file..."
-                  cat > ~/novatix/app/develop/.env << EOT
-          APP_NAME=${{ vars.APP_NAME }}
-          APP_ENV=${{ vars.APP_ENV }}
-          APP_KEY=${{ secrets.APP_KEY }}
-          APP_DEBUG=${{ vars.APP_DEBUG }}
-          APP_TIMEZONE=${{ vars.APP_TIMEZONE }}
-          APP_URL=${{ secrets.APP_URL }}
+              # Ensure generate_env.sh exists
+              echo "Creating generate_env.sh..."
+              cat > generate_env.sh << 'EOT'
+          #!/bin/bash
 
-          APP_LOCALE=${{ vars.APP_LOCALE }}
-          APP_FALLBACK_LOCALE=${{ vars.APP_FALLBACK_LOCALE }}
-          APP_FAKER_LOCALE=${{ vars.APP_FAKER_LOCALE }}
+          ENV_FILE="$HOME/novatix/app/develop/.env"
 
-          APP_MAINTENANCE_DRIVER=${{ vars.APP_MAINTENANCE_DRIVER }}
-          PHP_CLI_SERVER_WORKERS=${{ vars.PHP_CLI_SERVER_WORKERS }}
+          echo "Checking .env file..."
+          if [ ! -f "$ENV_FILE" ]; then
+              echo "Generating .env file..."
 
-          BCRYPT_ROUNDS=${{ vars.BCRYPT_ROUNDS }}
+              cat > "$ENV_FILE" <<EOF
+          APP_NAME=${APP_NAME}
+          APP_ENV=${APP_ENV}
+          APP_KEY=${APP_KEY}
+          APP_DEBUG=${APP_DEBUG}
+          APP_TIMEZONE=${APP_TIMEZONE}
+          APP_URL=${APP_URL}
 
-          LOG_CHANNEL=${{ vars.LOG_CHANNEL }}
-          LOG_STACK=${{ vars.LOG_STACK }}
-          LOG_DEPRECATIONS_CHANNEL=${{ vars.LOG_DEPRECATIONS_CHANNEL }}
-          LOG_LEVEL=${{ vars.LOG_LEVEL }}
+          APP_LOCALE=${APP_LOCALE}
+          APP_FALLBACK_LOCALE=${APP_FALLBACK_LOCALE}
+          APP_FAKER_LOCALE=${APP_FAKER_LOCALE}
 
-          DB_CONNECTION=${{ vars.DB_CONNECTION }}
-          DB_HOST=${{ secrets.DB_HOST }}
-          DB_PORT=${{ secrets.DB_PORT }}
-          DB_DATABASE=${{ secrets.DB_DATABASE }}
-          DB_USERNAME=${{ secrets.DB_USERNAME }}
-          DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+          APP_MAINTENANCE_DRIVER=${APP_MAINTENANCE_DRIVER}
+          PHP_CLI_SERVER_WORKERS=${PHP_CLI_SERVER_WORKERS}
 
-          SESSION_DRIVER=${{ vars.SESSION_DRIVER }}
-          SESSION_LIFETIME=${{ vars.SESSION_LIFETIME }}
-          SESSION_ENCRYPT=${{ vars.SESSION_ENCRYPT }}
-          SESSION_PATH=${{ vars.SESSION_PATH }}
-          SESSION_DOMAIN=${{ vars.SESSION_DOMAIN }}
+          BCRYPT_ROUNDS=${BCRYPT_ROUNDS}
 
-          BROADCAST_CONNECTION=${{ vars.BROADCAST_CONNECTION }}
-          FILESYSTEM_DISK=${{ vars.FILESYSTEM_DISK }}
-          QUEUE_CONNECTION=${{ vars.QUEUE_CONNECTION }}
+          LOG_CHANNEL=${LOG_CHANNEL}
+          LOG_STACK=${LOG_STACK}
+          LOG_DEPRECATIONS_CHANNEL=${LOG_DEPRECATIONS_CHANNEL}
+          LOG_LEVEL=${LOG_LEVEL}
 
-          CACHE_STORE=${{ vars.CACHE_STORE }}
-          CACHE_PREFIX=${{ vars.CACHE_PREFIX }}
+          DB_CONNECTION=${DB_CONNECTION}
+          DB_HOST=${DB_HOST}
+          DB_PORT=${DB_PORT}
+          DB_DATABASE=${DB_DATABASE_DEV}
+          DB_USERNAME=${DB_USERNAME}
+          DB_PASSWORD=${DB_PASSWORD}
 
-          MEMCACHED_HOST=${{ vars.MEMCACHED_HOST }}
+          SESSION_DRIVER=${SESSION_DRIVER}
+          SESSION_LIFETIME=${SESSION_LIFETIME}
+          SESSION_ENCRYPT=${SESSION_ENCRYPT}
+          SESSION_PATH=${SESSION_PATH}
+          SESSION_DOMAIN=${SESSION_DOMAIN}
 
-          REDIS_CLIENT=${{ vars.REDIS_CLIENT }}
-          REDIS_HOST=${{ secrets.REDIS_HOST }}
-          REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }}
-          REDIS_PORT=${{ secrets.REDIS_PORT }}
+          BROADCAST_CONNECTION=${BROADCAST_CONNECTION}
+          FILESYSTEM_DISK=${FILESYSTEM_DISK}
+          QUEUE_CONNECTION=${QUEUE_CONNECTION}
 
-          MAIL_MAILER=${{ vars.MAIL_MAILER }}
-          MAIL_SCHEME=${{ vars.MAIL_SCHEME }}
-          MAIL_HOST=${{ secrets.MAIL_HOST }}
-          MAIL_PORT=${{ secrets.MAIL_PORT }}
-          MAIL_USERNAME=${{ secrets.MAIL_USERNAME }}
-          MAIL_PASSWORD=${{ secrets.MAIL_PASSWORD }}
-          MAIL_FROM_ADDRESS=${{ secrets.MAIL_FROM_ADDRESS }}
-          MAIL_FROM_NAME=${{ vars.APP_NAME }}
+          CACHE_STORE=${CACHE_STORE}
+          CACHE_PREFIX=${CACHE_PREFIX}
 
-          AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION=${{ vars.AWS_DEFAULT_REGION }}
-          AWS_BUCKET=${{ secrets.AWS_BUCKET }}
-          AWS_USE_PATH_STYLE_ENDPOINT=${{ vars.AWS_USE_PATH_STYLE_ENDPOINT }}
+          MEMCACHED_HOST=${MEMCACHED_HOST}
 
-          VITE_APP_NAME=${{ vars.APP_NAME }}
-          EOT
-                  chmod 600 ~/novatix/app/develop/.env
-              fi
+          REDIS_CLIENT=${REDIS_CLIENT}
+          REDIS_HOST=${REDIS_HOST}
+          REDIS_PASSWORD=${REDIS_PASSWORD}
+          REDIS_PORT=${REDIS_PORT}
+
+          MAIL_MAILER=${MAIL_MAILER}
+          MAIL_SCHEME=${MAIL_SCHEME}
+          MAIL_HOST=${MAIL_HOST}
+          MAIL_PORT=${MAIL_PORT}
+          MAIL_USERNAME=${MAIL_USERNAME}
+          MAIL_PASSWORD=${MAIL_PASSWORD}
+          MAIL_FROM_ADDRESS=${MAIL_FROM_ADDRESS}
+          MAIL_FROM_NAME=${APP_NAME}
+
+          AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+          AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+          AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
+          AWS_BUCKET=${AWS_BUCKET}
+          AWS_USE_PATH_STYLE_ENDPOINT=${AWS_USE_PATH_STYLE_ENDPOINT}
+
+          VITE_APP_NAME=${APP_NAME}
           EOF
+
+              chmod 600 "$ENV_FILE"
+              echo ".env file generated successfully."
+          else
+              echo ".env file already exists. Skipping generation."
+          fi
+          EOT
+              chmod +x generate_env.sh
 
       - name: Update Repository on VPS
         run: ssh -i ~/.ssh/av_rsa -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "~/novatix/setups/update_repo.sh"
+
+      - name: Generate .env on VPS
+        run: ssh -i ~/.ssh/av_rsa -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "~/novatix/setups/generate_env.sh"
 
       - name: Install Dependencies on VPS
         run: ssh -i ~/.ssh/av_rsa -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "~/novatix/setups/install_dependencies.sh"
