--- a/.github/workflows/nt_vps_develop.yaml
+++ b/.github/workflows/nt_vps_develop.yaml
@@ -6,25 +6,25 @@ on:
       - develop
 
 jobs:
-  # test-build:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: 🛠 Checkout Repository
-  #       uses: actions/checkout@v4
+  test-build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: 🛠 Checkout Repository
+        uses: actions/checkout@v4
 
-  #     - name: 🔧 Setup Node.js
-  #       uses: actions/setup-node@v4
-  #       with:
-  #         node-version: 'lts/*'
-  #         cache: 'npm'
+      - name: 🔧 Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 'lts/*'
+          cache: 'npm'
 
-  #     - name: 📦 Install Frontend Dependencies
-  #       run: |
-  #         rm -rf node_modules package-lock.json
-  #         npm install --legacy-peer-deps
+      - name: 📦 Install Frontend Dependencies
+        run: |
+          rm -rf node_modules package-lock.json
+          npm install --legacy-peer-deps
 
-  #     - name: 🏗 Build Frontend (Vite)
-  #       run: npm run build
+      - name: 🏗 Build Frontend (Vite)
+        run: npm run build
 
   # test-laravel:
   #   runs-on: ubuntu-latest
