fix actions test the laravel

--- a/.github/workflows/nt_vps_develop.yaml
+++ b/.github/workflows/nt_vps_develop.yaml
@@ -41,7 +41,7 @@ jobs:
           tools: composer, phpunit
 
       - name: 📦 Install Backend Dependencies
-        run: composer install --no-dev --optimize-autoloader
+        run: composer install --optimize-autoloader --no-interaction
 
       - name: 🛠 Set Up Laravel Environment
         run: |
