fix tryfix actions laravel cloning

--- a/.github/workflows/nt_vps_develop.yaml
+++ b/.github/workflows/nt_vps_develop.yaml
@@ -101,7 +101,7 @@ jobs:
           else
               echo "Repository found. Pulling latest changes..."
               cd app/develop
-              git pull origin main
+              git pull origin develop
           fi
           ls -la  # Debugging: Show contents
           EOT
