fix custom user for nginx access

--- a/.github/workflows/nt_vps_develop.yaml
+++ b/.github/workflows/nt_vps_develop.yaml
@@ -255,6 +255,8 @@ jobs:
           ssh -i ~/.ssh/av_rsa -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} 'bash -s' << 'EOF'
           set -e  # Exit immediately if any command fails
 
+          CUSTOM_USER=${{ secrets.NGINX_USER }}
+
           # Ensure project directory exists
           sudo mkdir -p ~/novatix/app/develop
 
@@ -263,7 +265,7 @@ jobs:
           sudo ln -s ~/novatix/app/develop /var/www/novatix_staging
 
           # Set proper ownership
-          sudo chown -R www-data:www-data /var/www/novatix_staging
+          sudo chown -R $CUSTOM_USER:$CUSTOM_USER /var/www/novatix_staging
 
           # Move into project directory
           cd /var/www/novatix_staging
@@ -278,7 +280,7 @@ jobs:
           npm run build
 
           # Set correct permissions
-          sudo chown -R www-data:www-data /var/www/novatix_staging
+          sudo chown -R $CUSTOM_USER:$CUSTOM_USER /var/www/novatix_staging
           sudo chmod -R 775 /var/www/novatix_staging/storage /var/www/novatix_staging/bootstrap/cache
 
           # Cache configurations
