--- a/.github/workflows/nt_vps_production.yaml
+++ b/.github/workflows/nt_vps_production.yaml
@@ -172,6 +172,8 @@ jobs:
           ssh -i ~/.ssh/av_rsa -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} 'bash -s' << 'EOF'
           set -e  # Exit immediately if any command fails
 
+          CUSTOM_USER=${{ secrets.NGINX_USER }}
+
           # Ensure project directory exists
           sudo mkdir -p ~/novatix/app/production
 
@@ -180,7 +182,7 @@ jobs:
           sudo ln -s ~/novatix/app/production /var/www/novatix
 
           # Set proper ownership
-          sudo chown -R www-data:www-data /var/www/novatix
+          sudo chown -R $CUSTOM_USER:$CUSTOM_USER /var/www/novatix
 
           # Move into project directory
           cd /var/www/novatix
@@ -195,7 +197,7 @@ jobs:
           npm run build
 
           # Set correct permissions
-          sudo chown -R www-data:www-data /var/www/novatix
+          sudo chown -R $CUSTOM_USER:$CUSTOM_USER /var/www/novatix
           sudo chmod -R 775 /var/www/novatix/storage /var/www/novatix/bootstrap/cache
 
           # Cache configurations
