fix production actions safer migration

--- a/.github/workflows/nt_vps_production.yaml
+++ b/.github/workflows/nt_vps_production.yaml
@@ -207,5 +207,5 @@ jobs:
           php artisan view:cache
 
           # Run database migrations
-          php artisan migrate:fresh --force --seed
+          php artisan migrate --force
           EOF
